Gradle 5 compatibility and dependency update
This commit updates the dependencies (especially the serialization) and
adapts the build script to work with Gradle 5.